overflow problem solved

--- a/css/index.css
+++ b/css/index.css
@@ -7,15 +7,19 @@
 	font-family:"heading_font";
 	src: url("../fonts/heading_font.otf");
 }
-
+html {
+	overflow-x: hidden;
+}
 body, html{
 	width:100%;
+	height: 100%;
 	margin: 0px;
 	padding: 0px;
 }
 
 #viewport{
-	height:100vh;
+	height:100%;
+	width: 100%;
 }
 
 
